# mpv_tidy

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cache/: parser-crf-model.json  parser-crf.pkl
.cache/data/: gemini_case100.jsonl  gemini_case120.jsonl  gemini_case140.jsonl  gemini_case160.jsonl  gemini_case180.jsonl  gemini_case20.jsonl  gemini_case200.jsonl  gemini_case40.jsonl  gemini_case60.jsonl  gemini_case80.jsonl  parser_training_samples_case_0001_0100.jsonl  parser_training_samples_case_0101_0200.jsonl  parser_training_samples_case_0201_0300.jsonl
.github/workflows/: release.yml
docs/: CRF训练工具.md  CRF训练说明.md  操作文档.md
src/: App.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crf.rs  domain.rs  error.rs  lib.rs  library.rs  main.rs  matcher.rs  mpv.rs  organizer.rs  parser.rs  scanner.rs  settings.rs  training.rs
src/components/: AppShell.tsx
src/features/localAnime/: LocalAnimePage.tsx  localAnime.css
src/features/projectHome/: ProjectHomePage.tsx
src/features/settings/: SettingsPage.tsx  settings.css
src/services/: tauriCommands.ts
src/shared/: utils.ts
test_case/: template_induction_boundary_cases_100.txt
tools/: export_parser_crf_model.py  parser_crf_common.py  requirements-crf.txt  train_parser_crf.py
