[package]
name = "mpv-tidy"
version = "0.1.0"
description = "Anime Subtitle Manager / 动漫字幕整理与 MPV 启动器"
authors = ["mpv_tidy contributors"]
edition = "2021"

[lib]
name = "mpv_tidy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mpv-tidy"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
